# VisualPackingManagenmentSystem

./: CMakeLists.txt  README.md  cardetaildialog.cpp  cardetaildialog.h  feeservice.cpp  feeservice.h  loaddialog.cpp  loaddialog.h  loaddialog.ui  loadwindow.cpp  loadwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  managesetdialog.cpp  managesetdialog.h  managesetdialog.ui  name_password.txt  parkingwidget.cpp  parkingwidget.h  pathplanner.cpp  pathplanner.h  settingdialog.cpp  settingdialog.h  settingdialog.ui
src/: main.cpp
src/database/: databasemanager.cpp  databasemanager.h
src/entities/: car.cpp  car.h  feerule.h  parkspace.cpp  parkspace.h  pathresult.h
src/services/: authservice.cpp  authservice.h  feeservice.cpp  feeservice.h  iauthservice.h  ifeeservice.h
src/ui/: cardetaildialog.cpp  cardetaildialog.h  cardetaildialog.ui  loaddialog.cpp  loaddialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  managesetdialog.cpp  managesetdialog.h  parkingwidget.cpp  parkingwidget.h  settingdialog.cpp  settingdialog.h  settingdialog.ui
src/utils/: logger.cpp  logger.h  passwordhasher.cpp  passwordhasher.h  pathplanner.cpp  pathplanner.h  result.h
tests/: CMakeLists.txt  tst_authservice.cpp  tst_databasemanager.cpp  tst_feeservice.cpp  tst_passwordhasher.cpp  tst_pathplanner.cpp
